# rosalind

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  kmlib
include/: kmlib.h
src/: 001_counting_dna_nucleotides.c  DNA.c  FIB.c  GC.c  HAMM.c  IPRB.c  PROT.c  REVC.c  RNA.c  SUBS.c
src/lib/: kmlib.c
